--- a/web/themes/citizen_patterns/templates/zzz-custom/user/field--user--name--user.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/user/field--user--name--user.html.twig
@@ -39,6 +39,54 @@
 
 {% extends 'field.html.twig' %}
 {% block fieldSingleNo %}
-  <h1>{{- item.content -}}</h1>
+	{{ attach_library('citizen_patterns/user')}}
+  {% set image = element['#object'].field_user_image.0.target_id %}
+  {% set userId = element['#object'].uid.0.value %}
+  {% if userId is divisible by(3) %}
+  	{% set avatar = '/themes/citizen_patterns/images/avatars/avatar-gold.jpg' %}
+  {% elseif userId is even %}
+  	{% set avatar = '/themes/citizen_patterns/images/avatars/avatar-fuchsia.jpg' %}
+  {% else %}
+  	{% set avatar = '/themes/citizen_patterns/images/avatars/avatar-blue.jpg' %}
+  {% endif %}
+
+  <div class="user-image-wrapper">
+		{% if image %}
+			{{ drupal_entity('media',image,'square')}}
+		{% else %}
+			<img class="avatar" src="{{ avatar }}" width="225px" height="225px" alt="User profile avatar" />
+		{% endif %}
+	</div>
+
+	<h1>Dashboard</h1>
+
+  <div class="user-info">
+	  <div class="user-name">
+	  	<span>{{- element['#object'].field_first_name.0.value -}}</span>
+	  	<span>{{- element['#object'].field_last_name.0.value -}}</span>
+		</div>
+		<div class="user-roles">
+			{%- if 'administrator' in element['#object'].getroles -%}
+				<span class="role">Administrator</span>
+			{%- endif -%}
+			{%- if 'site_manager' in element['#object'].getroles -%}
+				<span class="role">Site Manager</span>
+			{%- endif -%}
+			{%- if 'editor' in element['#object'].getroles -%}
+				<span class="role">Editor</span>
+			{%- endif -%}
+		</div>
+		<div class="edit-link">
+			<a href="/user/{{ element['#object'].uid.0.value }}/edit">Edit Profile</a>
+		</div>
+		<div class="logout-link">
+			<a href="/user/logout">Logout</a>
+		</div>
+	</div>
+
+	<div class="action-buttons">
+		<a href="/admin/content" class="button">View Content</a>
+		<a href="/node/add" class="button">+ Add Content</a>
+	</div>
 {% endblock %}
 
